--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,42 @@
-flask==2.0.1
-flask-cors==3.0.10
-optuna==2.10.0
-werkzeug==2.0.1
+# 웹 프레임워크
+flask==2.3.3
+flask-cors==4.0.0
+werkzeug==2.3.7
+
+# 데이터 처리 및 분석
+pandas==2.1.1
+numpy==1.24.3
+
+# 머신러닝 및 딥러닝
+torch==2.0.1
+torchvision==0.15.2
+torchaudio==2.0.2
+scikit-learn==1.3.0
+
+# 하이퍼파라미터 최적화
+optuna==3.3.0
+
+# 시각화
+matplotlib==3.7.2
+seaborn==0.12.2
+
+# 유틸리티
+python-dateutil==2.8.2
+pytz==2023.3
+
+# 개발 및 디버깅 (선택사항)
+jupyter==1.0.0
+ipython==8.15.0
+
+# 성능 최적화 (선택사항)
+numba==0.57.1
+
+# 데이터 검증 및 타입 힌팅 (선택사항)
+pydantic==2.3.0
+
+# 로깅 및 모니터링
+colorama==0.4.6
+
+# 파일 처리
+openpyxl==3.1.2
+xlrd==2.0.1
