--- a/mopj-dashboard/nginx/nginx.conf
+++ b/mopj-dashboard/nginx/nginx.conf
@@ -5,17 +5,104 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # 보안 헤더 설정
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+    # Gzip 압축 설정
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/x-javascript
+        application/xml+rss
+        application/javascript
+        application/json;
+
+    # 정적 파일 캐싱
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+        access_log off;
+    }
+
     # 프론트엔드 정적 파일 서빙
     location / {
         try_files $uri $uri/ /index.html;
+        
+        # HTML 파일은 캐시하지 않음
+        location ~* \.html$ {
+            expires -1;
+            add_header Cache-Control "no-cache, no-store, must-revalidate";
+        }
     }
 
-    # 백엔드 API 프록시
+    # ML 예측 API - 타임아웃 없음
+    location ~ ^/api/(predict|predict/accumulated)$ {
+        proxy_pass http://backend:5000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # 타임아웃 비활성화 (무제한)
+        proxy_connect_timeout 0;
+        proxy_send_timeout 0;
+        proxy_read_timeout 0;
+        
+        # 큰 응답을 위한 버퍼 설정
+        proxy_buffering on;
+        proxy_buffer_size 8k;
+        proxy_buffers 16 8k;
+        proxy_busy_buffers_size 16k;
+    }
+
+    # 일반 API - 표준 타임아웃
     location /api/ {
         proxy_pass http://backend:5000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # 일반 API용 타임아웃 (2분)
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 120s;
+        proxy_read_timeout 120s;
+        
+        # 표준 버퍼 설정
+        proxy_buffering on;
+        proxy_buffer_size 4k;
+        proxy_buffers 8 4k;
     }
+
+    # 파비콘 에러 로그 방지
+    location = /favicon.ico {
+        access_log off;
+        log_not_found off;
+    }
+
+    # robots.txt
+    location = /robots.txt {
+        access_log off;
+        log_not_found off;
+    }
+
+    # 숨김 파일 접근 차단
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # 에러 페이지
+    error_page 404 /index.html;
+    error_page 500 502 503 504 /index.html;
 }
