--- a/mopj-dashboard/nginx/nginx.conf
+++ b/mopj-dashboard/nginx/nginx.conf
@@ -1,3 +1,7 @@
+upstream backend_service {
+    server backend:5000;
+}
+
 server {
     listen 80;
     server_name localhost;
@@ -46,11 +50,16 @@ server {
 
     # ML 예측 API - 타임아웃 없음
     location ~ ^/api/(predict|predict/accumulated)$ {
-        proxy_pass http://backend:5000;
+        proxy_pass http://backend_service;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # CORS 헤더 추가
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization";
         
         # 타임아웃 비활성화 (무제한)
         proxy_connect_timeout 0;
@@ -64,13 +73,28 @@ server {
         proxy_busy_buffers_size 16k;
     }
 
-    # 일반 API - 표준 타임아웃
-    location /api/ {
-        proxy_pass http://backend:5000;
+    # 백엔드 API 직접 프록시 (http://localhost:5000/api 호출용)
+    location ~ ^/(api/.*)$ {
+        proxy_pass http://backend_service/$1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # CORS 헤더 추가
+        add_header Access-Control-Allow-Origin *;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization";
+        
+        # OPTIONS 요청 처리
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
+            add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization";
+            add_header Content-Length 0;
+            add_header Content-Type text/plain;
+            return 200;
+        }
         
         # 일반 API용 타임아웃 (2분)
         proxy_connect_timeout 30s;
