--- a/mopj-dashboard/nginx/nginx.conf
+++ b/mopj-dashboard/nginx/nginx.conf
@@ -73,9 +73,9 @@ server {
         proxy_busy_buffers_size 16k;
     }
 
-    # 백엔드 API 직접 프록시 (http://localhost:5000/api 호출용)
-    location ~ ^/(api/.*)$ {
-        proxy_pass http://backend_service/$1;
+    # 백엔드 API 직접 프록시 (/api 호출용)
+    location /api/ {
+        proxy_pass http://backend_service/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
