--- a/mopj-dashboard/nginx/nginx.conf
+++ b/mopj-dashboard/nginx/nginx.conf
@@ -48,34 +48,9 @@ server {
         }
     }
 
-    # ML 예측 API - 타임아웃 없음
-    location ~ ^/api/(predict|predict/accumulated)$ {
-        proxy_pass http://backend_service;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # CORS 헤더 추가
-        add_header Access-Control-Allow-Origin *;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
-        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization";
-        
-        # 타임아웃 비활성화 (무제한)
-        proxy_connect_timeout 0;
-        proxy_send_timeout 0;
-        proxy_read_timeout 0;
-        
-        # 큰 응답을 위한 버퍼 설정
-        proxy_buffering on;
-        proxy_buffer_size 8k;
-        proxy_buffers 16 8k;
-        proxy_busy_buffers_size 16k;
-    }
-
-    # 백엔드 API 직접 프록시 (/api 호출용)
+    # 백엔드 API 직접 프록시 (/api 호출용) - 모든 API 요청을 처리
     location /api/ {
-        proxy_pass http://backend_service/;
+        proxy_pass http://backend_service;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -96,10 +71,10 @@ server {
             return 200;
         }
         
-        # 일반 API용 타임아웃 (2분)
+        # 예측 API는 긴 타임아웃, 일반 API는 표준 타임아웃
         proxy_connect_timeout 30s;
-        proxy_send_timeout 120s;
-        proxy_read_timeout 120s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
         
         # 표준 버퍼 설정
         proxy_buffering on;
